--- a/Codigo Principal/TelaLogin.css
+++ b/Codigo Principal/TelaLogin.css
@@ -1,32 +1,111 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: rgb(163, 161, 158);
-}
-
-#login-container {
-    text-align: center;
-    border: 1px solid #ccc;
-    padding: 70px;
-    border-radius: 8px;
-    background-color: rgb(231, 229, 225);
-    
-    
-}
-
-#login-btn {
-    padding: 10px;
-    margin-top: 10px;
-    cursor: pointer;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
 }
 
 .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: black;
-    padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: black;
+  padding: 10px;
 }
 
-h1 {
-    margin-top: 0; 
+.Titulo {
+  color: blue;
+  margin: 0;
+}
+
+nav {
+  background-color: black;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav a {
+  color: white;
+  margin-right: 20px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.section {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+}
+
+h2 {
+  color: #333;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+button {
+  margin: 10px;
+  padding: 5px 10px;
+  background-color: #333;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #555;
+}
+
+.welcome-message {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+}
+
+.welcome-message p {
+  color: #333;
+  line-height: 1.5;
+  font-size: 20px;
+}
+
+#fonte {
+  font-size: 30px;
+}
+
+.carrosel {
+  text-align: center;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.conteudo {
+  text-align: left;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.conteudo p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: justify;
+  display: inline-block;
+  vertical-align: top;
+  width: 60%; /* Ajuste conforme necessário */
+}
+
+.conteudo img {
+  max-width: 100%;
+  height: auto;
+  display: inline-block;
+  vertical-align: top;
+  width: 40%; /* Ajuste conforme necessário */
 }
