--- a/Codigo Principal/Tecnologia.css
+++ b/Codigo Principal/Tecnologia.css
@@ -1,64 +1,8 @@
 body {
-  font-family: "Arial", sans-serif;
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
   margin: 0;
   padding: 0;
-  background-color: #f0f0f0;
-}
-
-h1 {
-  text-align: center;
-  color: #333;
-}
-
-p {
-  text-align: justify;
-  margin: 20px;
-}
-
-img {
-  display: block;
-  margin: 0 auto;
-  max-width: 25%;
-  height: auto;
-}
-
-table {
-  width: 80%;
-  margin: 20px auto;
-  border-collapse: collapse;
-}
-
-table,
-th,
-td {
-  border: 1px solid #333;
-}
-
-th,
-td {
-  padding: 8px;
-  text-align: center;
-}
-
-a {
-  display: block;
-  text-align: center;
-  margin: 10px auto;
-  padding: 6px;
-  color: #fff;
-  background-color: #007bff;
-  text-decoration: none;
-  border-radius: 5px;
-}
-
-a:hover {
-  background-color: #0056b3;
-}
-
-table img {
-  max-width: 20%;
-  height: auto;
-  margin: 5px auto;
 }
 
 .container {
@@ -68,6 +12,7 @@ table img {
   background-color: black;
   padding: 10px;
 }
+
 .Titulo {
   color: blue;
   margin: 0;
@@ -87,4 +32,54 @@ nav a {
   text-decoration: none;
   font-weight: bold;
   font-size: 16px;
+}
+
+h1 {
+  color: #333;
+  margin-top: 20px;
+}
+
+p {
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  margin-top: 20px;
+}
+
+table {
+  margin-top: 20px;
+  border-collapse: collapse;
+  width: 100%;
+  text-align: center;
+}
+
+table,
+th,
+td {
+  border: 1px solid #ddd;
+}
+
+th,
+td {
+  padding: 15px;
+}
+
+a {
+  text-decoration: none;
+  color: blue;
+  font-weight: bold;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
